Adding new files

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nishit's Personal Site</title>
+    <link rel="stylesheet" href="css/master.css">
 </head>
 <body>
     <table cellspacing="20">
@@ -30,7 +31,7 @@
         <li>Goal oriented, Problem solver, and Team player</li>
     </ul>
     <dl>
-        <dt><b>Programming Languages:</b></dt>
+        <dt><b class="sub_heading">Programming Languages:</b></dt>
         <table cellspacing="10">
             <tr>
                 <td>Python</td><td>⭐⭐⭐⭐⭐</td>
@@ -43,7 +44,7 @@
                 <td>React.JS</td><td>⭐⭐⭐⭐</td>
             </tr>
         </table>
-        <dt><b>Tools:</b></dt>
+        <dt><b class="sub_heading">Tools:</b></dt>
         <table cellspacing="10">
             <tr>
                 <td>Github</td><td>⭐⭐⭐⭐⭐</td>
@@ -54,13 +55,13 @@
                 <td>Asana</td><td>⭐⭐⭐</td>
             </tr>
         </table>
-        <dt><b>Cloud Technologies:</b></dt>
+        <dt><b class="sub_heading">Cloud Technologies:</b></dt>
         <table cellspacing="10">
             <tr>
                 <td>AWS (Lambda, Route53, EC2)</td><td>⭐⭐⭐</td>
             </tr>
         </table>
-        <dt><b>Environments</b></dt>
+        <dt><b class="sub_heading">Environments</b></dt>
         <table cellspacing="10">
             <tr>
                 <td>Linux</td><td>⭐⭐⭐⭐⭐</td>
@@ -74,57 +75,57 @@
     <h3>Work Experience</h3>
     <table cellspacing="20">
         <tr>
-            <td>Time Period</td>
-            <td>Position and Company</td>
+            <td class="work-heading">Time Worked</td>
+            <td class="work-heading">Position and Company</td>
         </tr>
         <tr>
-            <td>May 2021 - Present</td>
+            <td class="work-heading">May 2021 - Present</td>
             <td>
-                <b>Software Developer | HCL Canada</b>
+                <b class="sub_heading">Software Developer | HCL Canada</b>
                 <dl>
-                    <dt><b>Technology Stack</b></dt>
-                    <dd> Python, Linux, Server Technologies, Storage Functionalities, Networking</dd>
-                    <dt><b>Tasks</b></dt>
-                    <dd>Automating tests for validating servers and storage from different vendors in large
+                    <dt><b class="sub_heading">Technology Stack</b></dt>
+                    <dd class="work-content"> Python, Linux, Server Technologies, Storage Functionalities, Networking</dd>
+                    <dt><b class="sub_heading">Tasks</b></dt>
+                    <dd class="work-content">Automating tests for validating servers and storage from different vendors in large
                         data center environment.</dd>
-                    <dd>Build tools and automation to make testing and integration faster, simpler, and more
+                    <dd class="work-content">Build tools and automation to make testing and integration faster, simpler, and more
                         effective in a Linux environment.</dd>
-                    <dd>Identify areas for test coverage improvement, implement solutions.</dd>
+                    <dd class="work-content">Identify areas for test coverage improvement, implement solutions.</dd>
                 </dl>
             </td>
         </tr>
         <tr>
-            <td>August 2018 - August 2019</td>
+            <td class="work-heading">August 2018 - August 2019</td>
             <td>
-                <b>Solutions Developer | IOTGUIDER</b>
+                <b class="sub_heading">Solutions Developer | IOTGUIDER</b>
                 <dl>
-                    <dt><b>Technology Stack</b></dt>
-                    <dd> Python, Shell Scripting, C#, Javascript, Server Operations, Database
+                    <dt><b class="sub_heading">Technology Stack</b></dt>
+                    <dd class="work-content"> Python, Shell Scripting, C#, Javascript, Server Operations, Database
                         Management (MySQL).</dd>
-                    <dt><b>Tasks</b></dt>
-                    <dd>Coordinating with Project Manager, Addressing Junior Developer, communicating
+                    <dt><b class="sub_heading">Tasks</b></dt>
+                    <dd class="work-content">Coordinating with Project Manager, Addressing Junior Developer, communicating
                         with client for improvements and saving costs by 20%.</dd>
-                    <dd>Contributed to creating .Net based IoT applications using C#.</dd>
-                    <dd>Digital Marketing and Social awareness with turnaround ratio for 30%.</dd>
-                    <dd>Proposing IOT based solution for clients based on touchless automation or voice-based
+                    <dd class="work-content">Contributed to creating .Net based IoT applications using C#.</dd>
+                    <dd class="work-content">Digital Marketing and Social awareness with turnaround ratio for 30%.</dd>
+                    <dd class="work-content">Proposing IOT based solution for clients based on touchless automation or voice-based
                         automation service.</dd>
                 </dl>
             </td>
         </tr>
         <tr>
-            <td>December 2017 - August 2018</td>
+            <td class="work-heading">December 2017 - August 2018</td>
             <td>
-                <b>Full Stack Developer | GTU Innovation Council</b>
+                <b class="sub_heading">Full Stack Developer | GTU Innovation Council</b>
                 <dl>
-                    <dt><b>Technology Stack</b></dt>
-                    <dd> MEAN Stack, JavaScript, WordPress, AWS, GITHUB, Computer
+                    <dt><b class="sub_heading">Technology Stack</b></dt>
+                    <dd class="work-content"> MEAN Stack, JavaScript, WordPress, AWS, GITHUB, Computer
                         Networking.</dd>
-                    <dt><b>Tasks</b></dt>
-                    <dd> Redesign GTU Innovation Council Web portal, Social Media engagement, Project
+                    <dt><b class="sub_heading">Tasks</b></dt>
+                    <dd class="work-content"> Redesign GTU Innovation Council Web portal, Social Media engagement, Project
                         leader for Web portal.</dd>
-                    <dd>Contributed to creating .Net based IoT applications using C#.</dd>
-                    <dd>Redesigned portal attracted more than 50% applicants than previous year.</dd>
-                    <dd>GIC was able to successfully conduct 20 workshops for product development.</dd>
+                    <dd class="work-content">Contributed to creating .Net based IoT applications using C#.</dd>
+                    <dd class="work-content">Redesigned portal attracted more than 50% applicants than previous year.</dd>
+                    <dd class="work-content">GIC was able to successfully conduct 20 workshops for product development.</dd>
                 </dl>
             </td>
         </tr>
