Creating new Front page

--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
     <title>Nishit's Personal Site</title>
     <link rel="stylesheet" href="css/master.css">
 </head>
 <body>
-    <table cellspacing="20">
-        <tr>
-            <td>
-                <img src="profile_photo.png" alt="Nishit's profile picture" width="200" height="200">
-            </td>
-            <td>
-                <h1>Nishit Patel</h1>
-                <p><em>Software Developer at HCL Canada</em></p>
-                <p> Experienced python developer now learning MERN Stack.</p>
-                <p><a href="https://www.linkedin.com/in/nishitpatel28">linkedin/nishitpatel28</a> | <a href="https:www.github.com/nishitpatel28">github/nishitpatel28</a></p>
-            </td>    
-        </tr>
-    </table>    
-    <hr>
+    <div class="container" id="main-container">
+        <div id="head-container" >
+            <img src="resources/images/IMG_4122.PNG" alt="Nishit's profile picture" width="200" height="200">
+            <h1 id="my-title">I'M Nishit Patel</h1>
+            <p class="main-font">I'm a Software Developer</p>
+            <div><p class="main-font">I <img src="resources/icons/heart.png" alt="Love" class="icons"> Python</p></div>
+            <p class="main-font">Learing Full-Stack development</p>
+            <p class="main-font"><a href="https://www.linkedin.com/in/nishitpatel28"><img src="resources/icons/linkedin.png" alt="Linkedin" class="icons"> /nishitpatel28</a></p>
+            <p class="main-font"><a href="https:www.github.com/nishitpatel28"><img src="resources/icons/github.png" alt="Github" class="icons"> /nishitpatel28</a></p>
+        </div>
+    </div>
     <h3>Skills</h3>
     <ul>
         <li>Software development using OOP</li>
