New enhancments to UI

--- a/index.html
+++ b/index.html
@@ -11,126 +11,103 @@
     <link rel="stylesheet" href="css/master.css">
 </head>
 <body>
-    <div class="container" id="main-container">
+    <div id="main-container">
         <div id="head-container" >
             <img src="resources/images/IMG_4122.PNG" alt="Nishit's profile picture" width="200" height="200">
-            <h1 id="my-title">I'M Nishit Patel</h1>
-            <p class="main-font">I'm a Software Developer</p>
-            <div><p class="main-font">I <img src="resources/icons/heart.png" alt="Love" class="icons"> Python</p></div>
-            <p class="main-font">Learing Full-Stack development</p>
-            <p class="main-font"><a href="https://www.linkedin.com/in/nishitpatel28"><img src="resources/icons/linkedin.png" alt="Linkedin" class="icons"> /nishitpatel28</a></p>
-            <p class="main-font"><a href="https:www.github.com/nishitpatel28"><img src="resources/icons/github.png" alt="Github" class="icons"> /nishitpatel28</a></p>
+            <h1 class="my-title">Hi 👋 I'm Nishit</h1>
+            <p class="main-font">a Software Developer</p>
         </div>
     </div>
-    <h3>Skills</h3>
-    <ul>
-        <li>Software development using OOP</li>
-        <li>UNIX Server operation</li>
-        <li>Version control and management</li>
-        <li>API Management and Migration.</li>
-        <li>Goal oriented, Problem solver, and Team player</li>
-    </ul>
-    <dl>
-        <dt><b class="sub_heading">Programming Languages:</b></dt>
-        <table cellspacing="10">
-            <tr>
-                <td>Python</td><td>⭐⭐⭐⭐⭐</td>
-                <td>Java</td><td>⭐⭐⭐⭐</td>
-                <td>JavaScript</td><td>⭐⭐⭐⭐</td>
-            </tr>
-            <tr>
-                <td>C#</td><td>⭐⭐⭐</td>
-                <td>Node.JS</td><td>⭐⭐⭐⭐</td>
-                <td>React.JS</td><td>⭐⭐⭐⭐</td>
-            </tr>
-        </table>
-        <dt><b class="sub_heading">Tools:</b></dt>
-        <table cellspacing="10">
-            <tr>
-                <td>Github</td><td>⭐⭐⭐⭐⭐</td>
-                <td>GitLab</td><td>⭐⭐⭐⭐⭐</td>
-            </tr>
-            <tr>
-                <td>Jenkins</td><td>⭐⭐⭐⭐</td>
-                <td>Asana</td><td>⭐⭐⭐</td>
-            </tr>
-        </table>
-        <dt><b class="sub_heading">Cloud Technologies:</b></dt>
-        <table cellspacing="10">
-            <tr>
-                <td>AWS (Lambda, Route53, EC2)</td><td>⭐⭐⭐</td>
-            </tr>
-        </table>
-        <dt><b class="sub_heading">Environments</b></dt>
-        <table cellspacing="10">
-            <tr>
-                <td>Linux</td><td>⭐⭐⭐⭐⭐</td>
-            </tr>
-            <tr>
-                <td>Windows Server</td><td>⭐⭐⭐⭐</td>
-            </tr>
-        </table>
-    </dl>
+    <div class="container">
+        <h1 class="my-title">Tools and Technologies I use to get stuff done</h1>
+        <div class="flex-container">
+            <div class="skill">
+                <img src="resources/skills/python.png" alt="Python3" class="skill-image">
+                <p class="skill-text">Python</p>
+            </div>
+            <div class="skill">
+                <img src="resources/skills/java.png" alt="Java" class="skill-image">
+                <p class="skill-text">Java</p>
+            </div>
+            <div class="skill">
+                <img src="resources/skills/js.png" alt="JavaScript" class="skill-image">
+                <p class="skill-text">JavaScript</p>
+            </div>
+            <div class="skill">
+                <img src="resources/skills/c-sharp.png" alt="C#" class="skill-image">
+                <p class="skill-text">C#</p>
+            </div>
+            <div class="skill">
+                <img src="resources/skills/nodejs.png" alt="nodejs" class="skill-image">
+                <p class="skill-text">nodejs</p>
+            </div><div class="skill">
+                <img src="resources/skills/react.png" alt="ReactJs" class="skill-image">
+                <p class="skill-text">ReactJs</p>
+            </div><div class="skill">
+                <img src="resources/skills/github-sign.png" alt="Github" class="skill-image">
+                <p class="skill-text">Github</p>
+            </div>
+            <div class="skill">
+                <img src="resources/skills/gitlab.png" alt="GitLab" class="skill-image">
+                <p class="skill-text">GitLab</p>
+            </div>
+            <div class="skill">
+                <img src="resources/skills/api_icon_155812.png" alt="API Management" class="skill-image">
+                <p class="API Management">API Management</p>
+            </div>
+            <div class="skill">
+                <img src="resources/skills/command-line.png" alt="command-line" class="skill-image">
+                <p class="skill-text">Command Line</p>
+            </div>
+            <div class="skill">
+                <img src="resources/skills/cloud-server.png" alt="cloud-server" class="skill-image">
+                <p class="skill-text">Cloud Computing</p>
+            </div>
+            <div class="skill">
+                <img src="resources/skills/oop.png" alt="oop" class="skill-image">
+                <p class="skill-text">Object Oriented Programming</p>
+            </div>
+
+        </div>
+    </div>
     <hr>
-    <h3>Work Experience</h3>
-    <table cellspacing="20">
-        <tr>
-            <td class="work-heading">Time Worked</td>
-            <td class="work-heading">Position and Company</td>
-        </tr>
-        <tr>
-            <td class="work-heading">May 2021 - Present</td>
-            <td>
-                <b class="sub_heading">Software Developer | HCL Canada</b>
-                <dl>
-                    <dt><b class="sub_heading">Technology Stack</b></dt>
-                    <dd class="work-content"> Python, Linux, Server Technologies, Storage Functionalities, Networking</dd>
-                    <dt><b class="sub_heading">Tasks</b></dt>
-                    <dd class="work-content">Automating tests for validating servers and storage from different vendors in large
-                        data center environment.</dd>
-                    <dd class="work-content">Build tools and automation to make testing and integration faster, simpler, and more
-                        effective in a Linux environment.</dd>
-                    <dd class="work-content">Identify areas for test coverage improvement, implement solutions.</dd>
-                </dl>
-            </td>
-        </tr>
-        <tr>
-            <td class="work-heading">August 2018 - August 2019</td>
-            <td>
-                <b class="sub_heading">Solutions Developer | IOTGUIDER</b>
-                <dl>
-                    <dt><b class="sub_heading">Technology Stack</b></dt>
-                    <dd class="work-content"> Python, Shell Scripting, C#, Javascript, Server Operations, Database
-                        Management (MySQL).</dd>
-                    <dt><b class="sub_heading">Tasks</b></dt>
-                    <dd class="work-content">Coordinating with Project Manager, Addressing Junior Developer, communicating
-                        with client for improvements and saving costs by 20%.</dd>
-                    <dd class="work-content">Contributed to creating .Net based IoT applications using C#.</dd>
-                    <dd class="work-content">Digital Marketing and Social awareness with turnaround ratio for 30%.</dd>
-                    <dd class="work-content">Proposing IOT based solution for clients based on touchless automation or voice-based
-                        automation service.</dd>
-                </dl>
-            </td>
-        </tr>
-        <tr>
-            <td class="work-heading">December 2017 - August 2018</td>
-            <td>
-                <b class="sub_heading">Full Stack Developer | GTU Innovation Council</b>
-                <dl>
-                    <dt><b class="sub_heading">Technology Stack</b></dt>
-                    <dd class="work-content"> MEAN Stack, JavaScript, WordPress, AWS, GITHUB, Computer
-                        Networking.</dd>
-                    <dt><b class="sub_heading">Tasks</b></dt>
-                    <dd class="work-content"> Redesign GTU Innovation Council Web portal, Social Media engagement, Project
-                        leader for Web portal.</dd>
-                    <dd class="work-content">Contributed to creating .Net based IoT applications using C#.</dd>
-                    <dd class="work-content">Redesigned portal attracted more than 50% applicants than previous year.</dd>
-                    <dd class="work-content">GIC was able to successfully conduct 20 workshops for product development.</dd>
-                </dl>
-            </td>
-        </tr>
-    </table>
-    <hr>
-    <p><a href="contact_me.html"><em>Contact me</em></a></p>
+    <div class="container">
+        <h1 class="my-title">My Work Experience</h1>
+        <div class="work-exp-container">
+            <p id="duration">May 2020 - Present</p>
+            <h3 class="work-content">Software Developer - HCL Canada</h3>
+            <div>
+                <h4 class="work-content">Skills</h4>
+                <p class="work-desc">Python, Shell Scripting, Linux, Server Technologies, Storage Functionalities, Networking</p>
+                <h4 class="work-content">Experience</h4>
+                <p class="work-desc">Automating scripts and tools to validate benchmarks of server and it's components in data center.</p>
+                <p class="work-desc">Build tools and write scripts capable of running in UNIX environment using minimum system resources.</p>
+                <p class="work-desc">Identify areas for benchmark coverage.</p>
+                <p class="work-desc">Optimize code framework and resolve framework related issues.</p>
+            </div>
+        </div>
+        <hr style="border-color: #e09292;">
+        <div class="work-exp-container">
+            <p id="duration">August 2018 - August 2019</p>
+            <h3 class="work-content">Software Developer - IOTGUIDER</h3>
+            <div id="exp">
+                <h4 class="work-content"> Skills</h4>
+                <p class="work-desc">Python, Shell Scripting, JavaScript, MySQL, C# </p>
+                <h4 class="work-content">Experience</h4>
+                <p class="work-desc">Write scripts to automate functioning of small appliances.</p>
+                <p class="work-desc">Design IOT Based solutions involving voice-based automation, image capture and motion sensing.</p>
+                <p class="work-desc">Using Agile approach to create solutions within given timeframe.</p>
+                <p class="work-desc">Mentoring Junior developers and providing continuous product support to clients.</p>
+            </div>
+        </div>
+    </div>
+    <div class="flex-container" id="footer">
+        <div id="social-links">
+            <a href="https://www.linkedin.com/in/nishitpatel28"><img src="resources/icons/linkedin.png" alt="Linkedin" class="social"></a>
+        </div>
+        <div id="social-links">
+            <a href="https:www.github.com/nishitpatel28"><img src="resources/icons/github.png" alt="Github" class="social"></a>
+        </div> 
+    </div>
 </body>
 </html>
